--- a/include/views/default/seven/frontend/orders.phtml
+++ b/include/views/default/seven/frontend/orders.phtml
@@ -28,7 +28,7 @@
 
 				<div class="hide-desktop">
 
-					<button class="button green button-invite" ng-click="navigation.link('/free-food','push')">
+					<button class="button lightorange button-invite" ng-click="navigation.link('/free-food','push')">
 						<span>Free food</span>
 					</button>
 
