--- a/include/views/default/seven/frontend/restaurant.phtml
+++ b/include/views/default/seven/frontend/restaurant.phtml
@@ -283,7 +283,7 @@
 										<div ng-if="!success.delivery_free">
 
 											<div ng-show="!success.error">
-												Congrats! This gift card ({{success.giftcard}}) gives you {{AB.dollar}}{{success.value}}.
+												Congrats! This gift card ({{success.giftcard}}) gives you ${{success.value}}.
 											</div>
 											<div ng-show="success.error == 'other restaurant'">
 												The gift card ({{success.giftcard}}) you are trying to use belongs to another restaurant.
