Share with SMS contacts as only customer referral option on mobile #5092

--- a/include/views/default/crunchbutton/frontend/free-food.phtml
+++ b/include/views/default/crunchbutton/frontend/free-food.phtml
@@ -28,7 +28,7 @@
 
 	</div>
 	<br />
-	<div>
+	<div ng-if="account.user.points.away_free_delivery > 0">
 		<p>
 			You are <b>{{account.user.points.away_free_delivery}}</b> points away from a free delivery!<br>
 		</p>
