--- a/include/views/default/crunchbutton/frontend/giftcard.phtml
+++ b/include/views/default/crunchbutton/frontend/giftcard.phtml
@@ -45,7 +45,7 @@
 				Congrats, you just got a <b>${{giftcard.value}}</b> gift card.
 			</div>
 			<br/>
-			Go ahead and order something delicious!
+			Go ahead and order some food!
 		</div>
 		<div class="bottom-links">
 			<span class="giftcard-later" ng-click="modal.close();">Great</span>
