--- a/include/views/default/crunchbutton/frontend/orders.phtml
+++ b/include/views/default/crunchbutton/frontend/orders.phtml
@@ -43,7 +43,7 @@
 				<br/><br/>
 
 				<p>
-					You are <b>{{account.user.points.away_free_delivery}}</b> points away from a free delivery.<br>
+					You are <b>{{account.user.points.away_free_delivery}}</b> points away from a <strong>free delivery</strong>.<br>
 					Earn points by ordering food, sharing your order, or referring friends.<br>
 					Get your friends to enter your code {{account.user.invite_code}} in the Notes section of their first order, and they will get $3 off and you a delivery free ;)
 					<br>
