--- a/include/views/default/seven/layout/html.body.phtml
+++ b/include/views/default/seven/layout/html.body.phtml
@@ -187,8 +187,8 @@
 				<p>
 					Push a button. Get food. We find the best food from the top local restaurants so you dont have to.
 					<br><br>
-					Mail us: <a href="mailto:hello@crunchbutton.com">hello@crunchbutton.com</a><br>
-					Text us: <a href="tel:+16467831444">(646) 783-1444</a>
+					Mail us: <a href="mailto:{{hello}}">{{hello}}</a><br>
+					Text us: <a href="tel:+1{{textUs}}">{{textUsFormatted}}</a>
 				</p>
 			</div>
 			<div class="footer-column-info">
