--- a/include/views/default/seven/frontend/order.phtml
+++ b/include/views/default/seven/frontend/order.phtml
@@ -28,7 +28,7 @@
 				</div>
 				<div class="hot-dog-relax animated-resize" ng-instant="cherryMessage = (cherryMessage > 7 ? 0 : (cherryMessage + 1))" instant-pass-thru></div>
 				<div class="divider"></div>
-				<div class="order-tagline"><h1>Your order is on it's way</h1><h2>and saved for easy 1 click reordering</h2></div>
+				<div class="order-tagline"><h1>Your order is on its way</h1><h2>and saved for easy 1 click reordering</h2></div>
 			</div>
 		</div>
 
