--- a/include/views/default/seven/frontend/free-food.phtml
+++ b/include/views/default/seven/frontend/free-food.phtml
@@ -5,9 +5,9 @@
 
 		<div class="two-col">
 
-			<div ng-show="account.user.invite_code">
+			<div ng-show="referral.invite_code">
 				<p>
-					Get your friends to enter <b>your referral code</b> in the Notes section of their first order, and they will get $3 off and you a delivery free ;)
+					Get your friends to enter <b>your referral code</b> in the Notes section of their first order, and you'll both get a free delivery ;)
 				</p><br/>
 
 			</div>
@@ -17,7 +17,7 @@
 
 				<div class="hide-desktop">
 					<a href="{{referral.sms}}" target="_blank">
-						<button class="button green button-invite">
+						<button class="button lightorange button-invite">
 							<i class="fa fa-comment"></i> <span>Invite Friends</span>
 						</button>
 					</a>
@@ -39,7 +39,7 @@
 				</div>
 
 			<br><br>
-			<p>Your code: <span class="referal-text-spacer"></span><b>{{account.user.invite_code}}</b></p>
+			<p>Your code: <span class="referal-text-spacer"></span><b>{{referral.invite_code}}</b></p>
 			<div class="hide-mobile">
 				<br>
 				<p>Invite URL: <span class="referal-text-spacer"></span><input class="referal-text-box" type="text" ng-simulate-read-only="{{referral.cleaned_url()}}" value="http://{{referral.cleaned_url()}}"></p>
