fixed #5294 text change

--- a/include/views/default/cockpit2/frontend/drivers/drivers-shifts-schedule.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-shifts-schedule.phtml
@@ -17,7 +17,7 @@
 			<div class="drivers-shift drivers-schedule">
 
 		<div class="dialog-message dialog-message-error">
-			<b><i class="fa fa-hand-o-right"></i> Don't forget: You must save your changes!</b>
+			<b><i class="fa fa-hand-o-right"></i> Don't forget: You must save your changes below!</b>
 		</div>
 
 
