fixed #5268 text change

--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -106,8 +106,7 @@ In many cases we don't have a formal relationship with the restaurant, and it's 
         What if the order price is wrong?
         </b>
         <br>
-We'll tell you how much the food should cost. If it costs more, email <a href="mailto:payment@crunchbutton.com">payment@crunchbutton.com</a> a photo of your receipt right away so we can change the prices and reimburse you correctly.<br><br>
-
+        We'll tell you how much the food should cost. If the prices in store differ from what we tell you, plz let us know! Just email your receipt and the order number to <a href="mailto:payment@crunchbutton.com">payment@crunchbutton.com</a>. 1 in 3 menu updates will earn you a random $ amount bonus ;)<br><br>
         <b>
         What if the customer doesn’t show up?
         </b>
@@ -128,13 +127,6 @@ Hang onto the food, text the customer and leave a friendly voicemail. Then go on
 
 Absolutely. You don't have to deliver an order before picking up the next one. We aim for delivery times under 45 minutes, so do whatever is most efficient! Make sure to mark everything as Accepted, Picked Up, and Delivered as you go.<br><br>
         <a name="advancedDelivery"></a>
-        <b>
-			Do I get all my tips?
-		</b>
-
-		<br>
-		Yes, every cent!
-		<br><br>
 <!--end #deliveryBasics-->
 <!--start #advancedDelivery section-->
         <span class="tableOfContentsFAQHead">
