--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -87,6 +87,10 @@ i {
 	body {
 		background: $background;
 	}
+	.order-box-top {
+		padding-left: 222px;
+		box-sizing: border-box;
+	}
 }
 
 ol, ul {
