Adding funds to Pexcard not working in cockpit.la #5255

--- a/include/views/default/cockpit2/frontend/staff/staff-pexcard.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-pexcard.phtml
@@ -74,7 +74,7 @@
 
 		</div>
 
-		<form name="form" novalidate ng-if="payInfo.cards.length">
+		<form name="form" novalidate ng-show="payInfo.cards.length">
 
 			<h2 class="title">Add funds</h2>
 
