fixed #5320 text changes

--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -162,7 +162,7 @@ We aim for delivery times under 45 minutes, so do whatever is most efficient!<br
         <b>
             How do I use my invite code and how do I earn extra $$$ with it?
         </b><br>
-Your Personal Invite Code: <strong>{{account.user.invite_code}}</strong>. Get new customers to enter <strong>{{account.user.invite_code}}</strong> in the Notes section of their first order for <strong>${{account.user.referral_customer_credit}}</strong> off and you’ll earn <strong>${{account.user.referral_admin_credit}}</strong> for each person you refer, directly into your bank account!
+Your Personal Invite Code: <strong>{{account.user.invite_code}}</strong>. Find NEW customers by promoting Crunchbutton on your own and getting them to enter this code in the Notes section of their first order. Each NEW person you refer will receive $3.00 off their first order, and you'll earn $7.00 when they order! Your code will only work for a customer's FIRST order.
 <br><br>
         <b>
         How do I tell which menu item toppings are default and which are additions?
