fixed some styling

--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3909,6 +3909,10 @@ body[class*=" page-drivers-welcome-"] .nav-top .nav-back {
 	padding-top: 15px;
 }
 
+.phonegap .order-box-top .top-pad {
+	padding-top: 22px;
+}
+
 
 
 @media screen and (min-width: $desktopWidth) {
