--- a/include/views/default/crunchbutton/frontend/order.phtml
+++ b/include/views/default/crunchbutton/frontend/order.phtml
@@ -44,7 +44,7 @@
 				<div class="rewards-container" ng-if="order.reward.points">
 					<div class="order-details-highlight">
 						<div ng-if="account.user.points.free_delivery_message && account.user.points.free_delivery">
-							You have <strong>{{account.user.points.free_delivery}}</strong> points!
+							You have <strong>{{account.user.points.show}}</strong> points!
 							 The next delivery fee is on us.
 						</div>
 						<div ng-if="!account.user.points.free_delivery_message">
