--- a/include/views/default/seven/frontend/order.phtml
+++ b/include/views/default/seven/frontend/order.phtml
@@ -57,7 +57,7 @@
 				<div class="order-buttons">
 
 					<p ng-if="account.user.points.free_delivery_message && account.user.points.free_delivery" class="delivery-free order-delivery-free">
-						You have <strong>{{account.user.points.free_delivery}}</strong> points! The next delivery fee is on us.
+						You have <strong>{{account.user.points.show}}</strong> points! The next delivery fee is on us.
 					</p>
 					<div ng-if="!account.user.points.free_delivery_message">
 						<br/>
