--- a/include/views/default/seven/frontend/orders.phtml
+++ b/include/views/default/seven/frontend/orders.phtml
@@ -10,7 +10,7 @@
 				<p><span class="delivery-free">You are <b>{{account.user.points.away_free_delivery || 0}}</b> points away  from a <strong>free delivery</strong>. Earn points by ordering food, sharing your order, or referring friends.</span></p><br/>
 			</div>
 			<div ng-show="account.user.points.free_delivery_message && account.user.points.free_delivery">
-				<p><span class="delivery-free">You have <b>{{account.user.points.free_delivery}}</b> points!</span> <br><br>The next delivery fee is on us.</p>
+				<p><span class="delivery-free">You have <b>{{account.user.points.show}}</b> points!</span> <br><br>The next delivery fee is on us.</p>
 			</div>
 
 			<br>
