--- a/include/views/default/crunchbutton/frontend/orders.phtml
+++ b/include/views/default/crunchbutton/frontend/orders.phtml
@@ -51,7 +51,7 @@
 				</p>
 			</div>
 			<div ng-if="account.user.points.free_delivery_message && account.user.points.free_delivery">
-				You have <strong>{{account.user.points.free_delivery}}</strong> points! The next delivery fee is on us.
+				You have <strong>{{account.user.points.show}}</strong> points! The next delivery fee is on us.
 			</div>
 
 			<br>
