--- a/include/views/default/crunchbutton/frontend/restaurant.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurant.phtml
@@ -382,7 +382,7 @@
 			</div>
 
 			<div ng-show="points.free_delivery_message && restaurant.delivery_service == '1'" >
-				<strong ng-if="order.form.pay_type == 'card'">You have {{points.free_delivery}} points! This delivery fee is on us.</strong>
+				<strong ng-if="order.form.pay_type == 'card'">You have {{points.show}} points! This delivery fee is on us.</strong>
 				<strong ng-if="order.form.pay_type == 'cash'">Pay with a card, NOT CASH, to get our delivery free.</strong>
 			</div>
 
@@ -397,7 +397,7 @@
 
 
 		<div ng-show="restaurant.delivery == '1' && order.form.delivery_type=='delivery' && points.free_delivery_message  && restaurant.delivery_service == '1'">
-			<strong ng-if="order.form.pay_type == 'card'">You have {{points.free_delivery}} points! This delivery fee is on us.</strong>
+			<strong ng-if="order.form.pay_type == 'card'">You have {{points.show}} points! This delivery fee is on us.</strong>
 			<strong ng-if="order.form.pay_type == 'cash'">Pay with a card, NOT CASH, to get our delivery free.</strong>
 		</div>
 
