Share with SMS contacts as only customer referral option on mobile #5092

--- a/include/views/default/seven/layout/html.body.phtml
+++ b/include/views/default/seven/layout/html.body.phtml
@@ -265,6 +265,7 @@
 <div ng-include="'assets/view/account.html'"></div>
 <div ng-include="'assets/view/account.reset.html'"></div>
 <div ng-include="'assets/view/restaurant.closed.inline.html'"></div>
+<div ng-include="'assets/view/referral.html'"></div>
 <div ng-include="'assets/view/giftcard.html'"></div>
 <div ng-include="'assets/view/support.html'"></div>
 <div ng-include="'assets/view/connection.error.html'"></div>
