--- a/include/views/default/crunchbutton/layout/html.body.phtml
+++ b/include/views/default/crunchbutton/layout/html.body.phtml
@@ -180,6 +180,7 @@
 <div ng-include="'assets/view/account.facebook.html'"></div>
 <div ng-include="'assets/view/restaurant.closed.inline.html'"></div>
 <div ng-include="'assets/view/giftcard.html'"></div>
+<div ng-include="'assets/view/referral.html'"></div>
 <div ng-include="'assets/view/suggestion.html'"></div>
 <div ng-include="'assets/view/support.html'"></div>
 <div ng-include="'assets/view/connection.error.html'"></div>
