--- a/include/views/mail/crunchbutton/order/details.phtml
+++ b/include/views/mail/crunchbutton/order/details.phtml
@@ -32,6 +32,10 @@ if( $version == 'customer' ){
 	</thead>
 	<?php
 	$dishes = $order->dishes( true );
+	// force load the dishes #5297
+	if( !$dishes || !$dishes->count() ){
+		$dishes = Order_Dish::q( 'SELECT * FROM order_dish WHERE id_order = "' . $order->id_order . '"' );
+	}
 	?>
 	<?php foreach ($dishes as $dish) { ?>
 		<tr>
