--- a/include/views/mail/crunchbutton/order/index.phtml
+++ b/include/views/mail/crunchbutton/order/index.phtml
@@ -2,6 +2,8 @@
 // customer / cockpit and drivers will see the value with the markup #2369
 $isDriverCockpit = ( $cockpit || $this->cockpit_url );
 
+$order->dishes();
+
 $restaurant = $order->restaurant();
 
 $icon = '';
