--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3956,3 +3956,7 @@ body[class*=" page-drivers-welcome-"] .nav-top .nav-back {
 	padding:0.5em;
 	text-align:left !important;
 }
+
+.phonegap .top-pad {
+	height: 66px;
+}
