--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -586,6 +586,7 @@ p {
 	font-size: 2em;
 	cursor: pointer;
 	flex: 1 1 auto;
+	-webkit-flex: 1 1 auto;
 
 	-webkit-transform: translateX(0) !important;
 
