--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3912,6 +3912,7 @@ body[class*=" page-drivers-welcome-"] .nav-top .nav-back {
 
 .phonegap .order-box-top .top-pad {
 	padding-top: 22px;
+	height: 4.4em;
 }
 
 
