--- a/include/views/default/cockpit2/layout/html.bottom.phtml
+++ b/include/views/default/cockpit2/layout/html.bottom.phtml
@@ -13,3 +13,11 @@
 <audio id="support-message-recieved">
 	<source src="/assets/cockpit/audio/message-inbound.wav"></source>
 </audio>
+<audio id="order-delivered">
+	<source src="/assets/cockpit/audio/order-delivered.wav"></source>
+</audio>
+<audio id="new-order">
+	<source src="/assets/cockpit/audio/new-order.wav"></source>
+</audio>
+
+
